force-app/main/default/objects/User/fields/Able_to_Change_Case_PIC_Dept__c.field-meta.xml
<CustomField>
    <fullName>Able_to_Change_Case_PIC_Dept__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Able to Change Case PIC/Dept</label>
    <type>Checkbox</type>
</CustomField>