force-app/main/default/objects/User/fields/Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_ID__c</fullName>
    <externalId>true</externalId>
    <label>Agent ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>