force-app/main/default/objects/User/fields/Agent_Queue_ID_Email_Reply_Customer__c.field-meta.xml
<CustomField>
    <fullName>Agent_Queue_ID_Email_Reply_Customer__c</fullName>
    <label>Agent Queue ID (Email Reply Customer)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>