force-app/main/default/objects/User/fields/Agent_Queue_ID_Log_Notification__c.field-meta.xml
<CustomField>
    <fullName>Agent_Queue_ID_Log_Notification__c</fullName>
    <label>Agent Queue ID (Log Notification)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>