force-app/main/default/objects/User/fields/Call_From_Contact__c.field-meta.xml
<CustomField>
    <fullName>Call_From_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call From Contact</label>
    <type>Checkbox</type>
</CustomField>