force-app/main/default/objects/User/fields/ID_User_RLS__c.field-meta.xml
<CustomField>
    <fullName>ID_User_RLS__c</fullName>
    <label>ID User RLS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>