force-app/main/default/objects/User/fields/Is_Backoffice__c.field-meta.xml
<CustomField>
    <fullName>Is_Backoffice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Backoffice</label>
    <type>Checkbox</type>
</CustomField>