force-app/main/default/objects/User/fields/is_Dispatcher__c.field-meta.xml
<CustomField>
    <fullName>is_Dispatcher__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User yang dapat change owner pada case detail</description>
    <label>is Dispatcher?</label>
    <type>Checkbox</type>
</CustomField>