force-app/main/default/objects/User/fields/Outbound_Activity_Case_type__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Activity_Case_type__c</fullName>
    <label>Outbound_Activity_Case_type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Confirmation - Welcome Call</fullName>
            </value>
            <value>
                <fullName>Confirmation - Update Data</fullName>
            </value>
            <value>
                <fullName>Confirmation - Claim</fullName>
            </value>
            <value>
                <fullName>Confirmation - Collection Task</fullName>
            </value>
            <value>
                <fullName>Conservation - Retain Redemption</fullName>
            </value>
            <value>
                <fullName>Conservation - Reinstate</fullName>
            </value>
            <value>
                <fullName>Conservation - Premium FU</fullName>
            </value>
            <value>
                <fullName>Conservation - NCB</fullName>
            </value>
            <value>
                <fullName>Survey Feedback</fullName>
            </value>
            <value>
                <fullName>Complaint Case</fullName>
            </value>
            <value>
                <fullName>Confirmation - SMS Pull Confirmation</fullName>
            </value>
            <value>
                <fullName>Confirmation - Complaint Follow Up</fullName>
            </value>
            <value>
                <fullName>Conservation - Renewal</fullName>
            </value>
            <value>
                <fullName>Survey Feedback - Survey - I Ask</fullName>
            </value>
            <value>
                <fullName>Survey Feedback - Survey - I Buy</fullName>
            </value>
            <value>
                <fullName>Survey Feedback - Survey - I Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>