force-app/main/default/objects/User/fields/Queue_PureCloud__c.field-meta.xml
<CustomField>
    <fullName>Queue_PureCloud__c</fullName>
    <description>for Report - Call Agent Status</description>
    <inlineHelpText>for Report - Call Agent Status</inlineHelpText>
    <label>Queue PureCloud</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Entity__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFI_Agency_BH</fullName>
            </value>
            <value>
                <fullName>AFI_Agency_CALLBACK</fullName>
            </value>
            <value>
                <fullName>AFI_Agency_EN</fullName>
            </value>
            <value>
                <fullName>AFI_Agency_OUTBOUND</fullName>
            </value>
            <value>
                <fullName>AFI_DPLK_BH</fullName>
            </value>
            <value>
                <fullName>AFI_DPLK_CALLBACK</fullName>
            </value>
            <value>
                <fullName>AFI_DPLK_EN</fullName>
            </value>
            <value>
                <fullName>AFI_DPLK_OUTBOUND</fullName>
            </value>
            <value>
                <fullName>AFI_EB_BH</fullName>
            </value>
            <value>
                <fullName>AFI_EB_CALLBACK</fullName>
            </value>
            <value>
                <fullName>AFI_EB_EN</fullName>
            </value>
            <value>
                <fullName>AFI_EB_OUTBOUND</fullName>
            </value>
            <value>
                <fullName>AFI_HelplineAgent</fullName>
            </value>
            <value>
                <fullName>AFI_HelplineAgent_CALLBACK</fullName>
            </value>
            <value>
                <fullName>AFI_HelplineAgent_OUTBOUND</fullName>
            </value>
            <value>
                <fullName>AFI_Retention</fullName>
            </value>
            <value>
                <fullName>AFI_SOE</fullName>
            </value>
            <value>
                <fullName>AFI_SOE_CALLBACK</fullName>
            </value>
            <value>
                <fullName>AFI_SOE_OUTBOUND</fullName>
            </value>
            <value>
                <fullName>AFI_Syariah_BH</fullName>
            </value>
            <value>
                <fullName>AFI_Syariah_CALLBACK</fullName>
            </value>
            <value>
                <fullName>AFI_Syariah_EN</fullName>
            </value>
            <value>
                <fullName>AFI_Syariah_OUTBOUND</fullName>
            </value>
            <value>
                <fullName>AFI_Telemarketing_BH</fullName>
            </value>
            <value>
                <fullName>AFI_Telemarketing_CALLBACK</fullName>
            </value>
            <value>
                <fullName>AFI_Telemarketing_EN</fullName>
            </value>
            <value>
                <fullName>AFI_Telemarketing_OUTBOUND</fullName>
            </value>
            <value>
                <fullName>AFI_TM</fullName>
            </value>
            <value>
                <fullName>AGI_CustomerCare_BH</fullName>
            </value>
            <value>
                <fullName>AGI_CustomerCare_CALLBACK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>