force-app/main/default/objects/User/fields/Return_Case_to_CCC__c.field-meta.xml
<CustomField>
    <fullName>Return_Case_to_CCC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Case to CCC</label>
    <type>Checkbox</type>
</CustomField>