force-app/main/default/objects/User/fields/Sisa_waktu_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Sisa_waktu_Follow_up__c</fullName>
    <label>Sisa waktu Follow up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>