force-app/main/default/objects/User/fields/Softphone_Type__c.field-meta.xml
<CustomField>
    <fullName>Softphone_Type__c</fullName>
    <label>Softphone Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Avaya</fullName>
            </value>
            <value>
                <fullName>Asterix</fullName>
            </value>
            <value>
                <fullName>PureCloud</fullName>
            </value>
            <value>
                <fullName>ARSI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>