force-app/main/default/objects/User/validationRules/Entity_Field_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Entity_Field_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Entity__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Entity__c</errorDisplayField>
    <errorMessage>Entity Field is required</errorMessage>
</ValidationRule>